bug picture alignment fixed

--- a/src/styling/NewsCard.scss
+++ b/src/styling/NewsCard.scss
@@ -42,6 +42,9 @@ $color_grey_dark: #a2a2a2;
   }
   .photo {
     position: absolute;
+    width: 220px;
+    height: 190px;
+    overflow: hidden;
     top: 0;
     right: 0;
     bottom: 0;
@@ -141,22 +144,6 @@ $color_grey_dark: #a2a2a2;
           margin-left: 5px;
           opacity: 1;
         }
-      }
-    }
-  }
-  p {
-    position: relative;
-    margin: 1rem 0 0;
-    &:first-of-type {
-      margin-top: 1.25rem;
-      &:before {
-        content: "";
-        position: absolute;
-        height: 5px;
-        background: $color_prime;
-        width: 35px;
-        top: -0.75rem;
-        border-radius: 3px;
       }
     }
   }
